--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,23 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="We use donations to create new donors" />
     <meta name="keywords" content="donations, philanthropy e autruism " />
+
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+
+    <!-- icon images iOS -->
     <link
       rel="apple-touch-icon"
       href="%PUBLIC_URL%/icons/touch-icon-iphone.png"
@@ -26,20 +43,45 @@
       sizes="167x167"
       href="%PUBLIC_URL%/icons/touch-icon-ipad-retina.png"
     />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <!-- splash screen iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link
+      href="%PUBLIC_URL%/splash-screen/apple_splash_2732.png"
+      sizes="2048x2732"
+      rel="apple-touch-startup-image"
+    />
+    <link
+      href="%PUBLIC_URL%/splash-screen/apple_splash_2224.png"
+      sizes="1668x2224"
+      rel="apple-touch-startup-image"
+    />
+    <link
+      href="%PUBLIC_URL%/splash-screen/apple_splash_2048.png"
+      sizes="1536x2048"
+      rel="apple-touch-startup-image"
+    />
+    <link
+      href="%PUBLIC_URL%/splash-screen/apple_splash_2436.png"
+      sizes="1125x2436"
+      rel="apple-touch-startup-image"
+    />
+    <link
+      href="%PUBLIC_URL%/splash-screen/apple_splash_2208.png"
+      sizes="1242x2208"
+      rel="apple-touch-startup-image"
+    />
+    <link
+      href="%PUBLIC_URL%/splash-screen/apple_splash_1334.png"
+      sizes="750x1334"
+      rel="apple-touch-startup-image"
+    />
+    <link
+      href="%PUBLIC_URL%/splash-screen/apple_splash_1136.png"
+      sizes="640x1136"
+      rel="apple-touch-startup-image"
+    />
+
     <link
       rel="preload"
       as="style"
